add : select tool

--- a/src/components/Menu/index.module.css
+++ b/src/components/Menu/index.module.css
@@ -9,7 +9,7 @@
     @apply cursor-pointer h-10 w-10 flex justify-center items-center rounded-md;
 
     &:hover,
-    &:active {
+    &.active {
       background-color: theme("colors.text2");
     }
     .icon {
