--- a/src/components/Menu/index.module.css
+++ b/src/components/Menu/index.module.css
@@ -1,5 +1,5 @@
 .menuContainer {
-  @apply px-5 py-1 flex justify-between w-1/4 absolute left-1/2 top-10 rounded-md;
+  @apply px-5 py-1 flex justify-between w-1/2 md:w-1/4 absolute left-1/2 top-10 rounded-md;
   border: 1px solid theme("colors.border1");
   transform: translate(-50%);
   box-shadow: theme("colors.shadow1");
@@ -16,5 +16,9 @@
       color: theme("colors.text1");
       font-size: 20px;
     }
+  }
+
+  @media screen and (max-width: 640px) {
+    @apply w-3/4;
   }
 }
